Add global metadata

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     {% include 'config/meta.njk' %}
-    <title>Title</title>
+    <title>{{ metadata.title }}</title>
   </head>
   <body>
   </body>
