Add favicon meta

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     {% include 'config/meta.njk' %}
+    {% include 'config/favicon.njk' %}
     <title>{{ metadata.title }}</title>
   </head>
   <body>
