Add social share

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -3,6 +3,7 @@
   <head>
     {% include 'config/meta.njk' %}
     {% include 'config/favicon.njk' %}
+    {% include 'config/social.njk' %}
     <title>{{ metadata.title }}</title>
   </head>
   <body>
