--- a/_includes/config/meta.njk
+++ b/_includes/config/meta.njk
@@ -4,3 +4,5 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 <meta name="msapplication-config" content="browserconfig.xml">
+<link rel="canonical" href="{{ metadata.url }}">
+<link rel="shortlink" href="{{ metadata.url }}">
