--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -5,6 +5,7 @@
     {% include 'config/favicon.njk' %}
     {% include 'config/social.njk' %}
     <title>{{ metadata.title }}</title>
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
   </head>
   <body>
     {{ content | safe }}
