--- a/css/style.css
+++ b/css/style.css
@@ -1,73 +1,1 @@
-@font-face {
-  font-family: "Roboto Mono";
-  font-style: italic;
-  font-weight: 100;
-  src: local("Roboto Mono Thin Italic"),local(RobotoMono-ThinItalic),url(//fonts.gstatic.com/s/robotomono/v5/L0xlDF4xlVMF-BfR8bXMIjhOkx6mWJqC.eot?#) format("eot"),url(//fonts.gstatic.com/s/robotomono/v5/L0xlDF4xlVMF-BfR8bXMIjhOkx6mWJqG.woff2) format("woff2"),url(//fonts.gstatic.com/s/robotomono/v5/L0xlDF4xlVMF-BfR8bXMIjhOkx6mWJqA.woff) format("woff");
-  font-display: swap;
-}
-@font-face {
-  font-family: "Roboto Mono";
-  font-style: italic;
-  font-weight: 300;
-  src: local("Roboto Mono Light Italic"),local(RobotoMono-LightItalic),url(//fonts.gstatic.com/s/robotomono/v5/L0xmDF4xlVMF-BfR8bXMIjhOk9a0T72jAg.eot?#) format("eot"),url(//fonts.gstatic.com/s/robotomono/v5/L0xmDF4xlVMF-BfR8bXMIjhOk9a0T72jBg.woff2) format("woff2"),url(//fonts.gstatic.com/s/robotomono/v5/L0xmDF4xlVMF-BfR8bXMIjhOk9a0T72jAA.woff) format("woff");
-  font-display: swap;
-}
-@font-face {
-  font-family: "Roboto Mono";
-  font-style: italic;
-  font-weight: 400;
-  src: local("Roboto Mono Italic"),local(RobotoMono-Italic),url(//fonts.gstatic.com/s/robotomono/v5/L0x7DF4xlVMF-BfR8bXMIjhOm32WXg.eot?#) format("eot"),url(//fonts.gstatic.com/s/robotomono/v5/L0x7DF4xlVMF-BfR8bXMIjhOm32WWg.woff2) format("woff2"),url(//fonts.gstatic.com/s/robotomono/v5/L0x7DF4xlVMF-BfR8bXMIjhOm32WXA.woff) format("woff");
-  font-display: swap;
-}
-@font-face {
-  font-family: "Roboto Mono";
-  font-style: italic;
-  font-weight: 500;
-  src: local("Roboto Mono Medium Italic"),local(RobotoMono-MediumItalic),url(//fonts.gstatic.com/s/robotomono/v5/L0xmDF4xlVMF-BfR8bXMIjhOk461T72jAg.eot?#) format("eot"),url(//fonts.gstatic.com/s/robotomono/v5/L0xmDF4xlVMF-BfR8bXMIjhOk461T72jBg.woff2) format("woff2"),url(//fonts.gstatic.com/s/robotomono/v5/L0xmDF4xlVMF-BfR8bXMIjhOk461T72jAA.woff) format("woff");
-  font-display: swap;
-}
-@font-face {
-  font-family: "Roboto Mono";
-  font-style: italic;
-  font-weight: 700;
-  src: local("Roboto Mono Bold Italic"),local(RobotoMono-BoldItalic),url(//fonts.gstatic.com/s/robotomono/v5/L0xmDF4xlVMF-BfR8bXMIjhOk8azT72jAg.eot?#) format("eot"),url(//fonts.gstatic.com/s/robotomono/v5/L0xmDF4xlVMF-BfR8bXMIjhOk8azT72jBg.woff2) format("woff2"),url(//fonts.gstatic.com/s/robotomono/v5/L0xmDF4xlVMF-BfR8bXMIjhOk8azT72jAA.woff) format("woff");
-  font-display: swap;
-}
-@font-face {
-  font-family: "Roboto Mono";
-  font-style: normal;
-  font-weight: 100;
-  src: local("Roboto Mono Thin"),local(RobotoMono-Thin),url(//fonts.gstatic.com/s/robotomono/v5/L0x7DF4xlVMF-BfR8bXMIjAom32WXg.eot?#) format("eot"),url(//fonts.gstatic.com/s/robotomono/v5/L0x7DF4xlVMF-BfR8bXMIjAom32WWg.woff2) format("woff2"),url(//fonts.gstatic.com/s/robotomono/v5/L0x7DF4xlVMF-BfR8bXMIjAom32WXA.woff) format("woff");
-  font-display: swap;
-}
-@font-face {
-  font-family: "Roboto Mono";
-  font-style: normal;
-  font-weight: 300;
-  src: local("Roboto Mono Light"),local(RobotoMono-Light),url(//fonts.gstatic.com/s/robotomono/v5/L0xkDF4xlVMF-BfR8bXMIjDgiWqxf7s.eot?#) format("eot"),url(//fonts.gstatic.com/s/robotomono/v5/L0xkDF4xlVMF-BfR8bXMIjDgiWqxf78.woff2) format("woff2"),url(//fonts.gstatic.com/s/robotomono/v5/L0xkDF4xlVMF-BfR8bXMIjDgiWqxf7k.woff) format("woff");
-  font-display: swap;
-}
-@font-face {
-  font-family: "Roboto Mono";
-  font-style: normal;
-  font-weight: 400;
-  src: local("Roboto Mono"),local(RobotoMono-Regular),url(//fonts.gstatic.com/s/robotomono/v5/L0x5DF4xlVMF-BfR8bXMIjhLq3s.eot?#) format("eot"),url(//fonts.gstatic.com/s/robotomono/v5/L0x5DF4xlVMF-BfR8bXMIjhLq38.woff2) format("woff2"),url(//fonts.gstatic.com/s/robotomono/v5/L0x5DF4xlVMF-BfR8bXMIjhLq3k.woff) format("woff");
-  font-display: swap;
-}
-@font-face {
-  font-family: "Roboto Mono";
-  font-style: normal;
-  font-weight: 500;
-  src: local("Roboto Mono Medium"),local(RobotoMono-Medium),url(//fonts.gstatic.com/s/robotomono/v5/L0xkDF4xlVMF-BfR8bXMIjC4iGqxf7s.eot?#) format("eot"),url(//fonts.gstatic.com/s/robotomono/v5/L0xkDF4xlVMF-BfR8bXMIjC4iGqxf78.woff2) format("woff2"),url(//fonts.gstatic.com/s/robotomono/v5/L0xkDF4xlVMF-BfR8bXMIjC4iGqxf7k.woff) format("woff");
-  font-display: swap;
-}
-@font-face {
-  font-family: "Roboto Mono";
-  font-style: normal;
-  font-weight: 700;
-  src: local("Roboto Mono Bold"),local(RobotoMono-Bold),url(//fonts.gstatic.com/s/robotomono/v5/L0xkDF4xlVMF-BfR8bXMIjDwjmqxf7s.eot?#) format("eot"),url(//fonts.gstatic.com/s/robotomono/v5/L0xkDF4xlVMF-BfR8bXMIjDwjmqxf78.woff2) format("woff2"),url(//fonts.gstatic.com/s/robotomono/v5/L0xkDF4xlVMF-BfR8bXMIjDwjmqxf7k.woff) format("woff");
-  font-display: swap;
-}
-body {
-  font-family: 'Roboto Mono';
-}
+@font-face{font-family:Roboto Mono;font-style:italic;font-weight:100;src:local("Roboto Mono Thin Italic"),local(RobotoMono-ThinItalic),url(//fonts.gstatic.com/s/robotomono/v5/L0xlDF4xlVMF-BfR8bXMIjhOkx6mWJqC.eot#) format("eot"),url(//fonts.gstatic.com/s/robotomono/v5/L0xlDF4xlVMF-BfR8bXMIjhOkx6mWJqG.woff2) format("woff2"),url(//fonts.gstatic.com/s/robotomono/v5/L0xlDF4xlVMF-BfR8bXMIjhOkx6mWJqA.woff) format("woff");font-display:swap}@font-face{font-family:Roboto Mono;font-style:italic;font-weight:300;src:local("Roboto Mono Light Italic"),local(RobotoMono-LightItalic),url(//fonts.gstatic.com/s/robotomono/v5/L0xmDF4xlVMF-BfR8bXMIjhOk9a0T72jAg.eot#) format("eot"),url(//fonts.gstatic.com/s/robotomono/v5/L0xmDF4xlVMF-BfR8bXMIjhOk9a0T72jBg.woff2) format("woff2"),url(//fonts.gstatic.com/s/robotomono/v5/L0xmDF4xlVMF-BfR8bXMIjhOk9a0T72jAA.woff) format("woff");font-display:swap}@font-face{font-family:Roboto Mono;font-style:italic;font-weight:400;src:local("Roboto Mono Italic"),local(RobotoMono-Italic),url(//fonts.gstatic.com/s/robotomono/v5/L0x7DF4xlVMF-BfR8bXMIjhOm32WXg.eot#) format("eot"),url(//fonts.gstatic.com/s/robotomono/v5/L0x7DF4xlVMF-BfR8bXMIjhOm32WWg.woff2) format("woff2"),url(//fonts.gstatic.com/s/robotomono/v5/L0x7DF4xlVMF-BfR8bXMIjhOm32WXA.woff) format("woff");font-display:swap}@font-face{font-family:Roboto Mono;font-style:italic;font-weight:500;src:local("Roboto Mono Medium Italic"),local(RobotoMono-MediumItalic),url(//fonts.gstatic.com/s/robotomono/v5/L0xmDF4xlVMF-BfR8bXMIjhOk461T72jAg.eot#) format("eot"),url(//fonts.gstatic.com/s/robotomono/v5/L0xmDF4xlVMF-BfR8bXMIjhOk461T72jBg.woff2) format("woff2"),url(//fonts.gstatic.com/s/robotomono/v5/L0xmDF4xlVMF-BfR8bXMIjhOk461T72jAA.woff) format("woff");font-display:swap}@font-face{font-family:Roboto Mono;font-style:italic;font-weight:700;src:local("Roboto Mono Bold Italic"),local(RobotoMono-BoldItalic),url(//fonts.gstatic.com/s/robotomono/v5/L0xmDF4xlVMF-BfR8bXMIjhOk8azT72jAg.eot#) format("eot"),url(//fonts.gstatic.com/s/robotomono/v5/L0xmDF4xlVMF-BfR8bXMIjhOk8azT72jBg.woff2) format("woff2"),url(//fonts.gstatic.com/s/robotomono/v5/L0xmDF4xlVMF-BfR8bXMIjhOk8azT72jAA.woff) format("woff");font-display:swap}@font-face{font-family:Roboto Mono;font-style:normal;font-weight:100;src:local("Roboto Mono Thin"),local(RobotoMono-Thin),url(//fonts.gstatic.com/s/robotomono/v5/L0x7DF4xlVMF-BfR8bXMIjAom32WXg.eot#) format("eot"),url(//fonts.gstatic.com/s/robotomono/v5/L0x7DF4xlVMF-BfR8bXMIjAom32WWg.woff2) format("woff2"),url(//fonts.gstatic.com/s/robotomono/v5/L0x7DF4xlVMF-BfR8bXMIjAom32WXA.woff) format("woff");font-display:swap}@font-face{font-family:Roboto Mono;font-style:normal;font-weight:300;src:local("Roboto Mono Light"),local(RobotoMono-Light),url(//fonts.gstatic.com/s/robotomono/v5/L0xkDF4xlVMF-BfR8bXMIjDgiWqxf7s.eot#) format("eot"),url(//fonts.gstatic.com/s/robotomono/v5/L0xkDF4xlVMF-BfR8bXMIjDgiWqxf78.woff2) format("woff2"),url(//fonts.gstatic.com/s/robotomono/v5/L0xkDF4xlVMF-BfR8bXMIjDgiWqxf7k.woff) format("woff");font-display:swap}@font-face{font-family:Roboto Mono;font-style:normal;font-weight:400;src:local("Roboto Mono"),local(RobotoMono-Regular),url(//fonts.gstatic.com/s/robotomono/v5/L0x5DF4xlVMF-BfR8bXMIjhLq3s.eot#) format("eot"),url(//fonts.gstatic.com/s/robotomono/v5/L0x5DF4xlVMF-BfR8bXMIjhLq38.woff2) format("woff2"),url(//fonts.gstatic.com/s/robotomono/v5/L0x5DF4xlVMF-BfR8bXMIjhLq3k.woff) format("woff");font-display:swap}@font-face{font-family:Roboto Mono;font-style:normal;font-weight:500;src:local("Roboto Mono Medium"),local(RobotoMono-Medium),url(//fonts.gstatic.com/s/robotomono/v5/L0xkDF4xlVMF-BfR8bXMIjC4iGqxf7s.eot#) format("eot"),url(//fonts.gstatic.com/s/robotomono/v5/L0xkDF4xlVMF-BfR8bXMIjC4iGqxf78.woff2) format("woff2"),url(//fonts.gstatic.com/s/robotomono/v5/L0xkDF4xlVMF-BfR8bXMIjC4iGqxf7k.woff) format("woff");font-display:swap}@font-face{font-family:Roboto Mono;font-style:normal;font-weight:700;src:local("Roboto Mono Bold"),local(RobotoMono-Bold),url(//fonts.gstatic.com/s/robotomono/v5/L0xkDF4xlVMF-BfR8bXMIjDwjmqxf7s.eot#) format("eot"),url(//fonts.gstatic.com/s/robotomono/v5/L0xkDF4xlVMF-BfR8bXMIjDwjmqxf78.woff2) format("woff2"),url(//fonts.gstatic.com/s/robotomono/v5/L0xkDF4xlVMF-BfR8bXMIjDwjmqxf7k.woff) format("woff");font-display:swap}body{font-family:Roboto Mono}
