--- a/css/config/_typography.scss
+++ b/css/config/_typography.scss
@@ -1,3 +1,50 @@
+html {
+  font-size: 18px;
+}
+
 body {
-  font-family: 'Roboto Mono';
+  background-color: white;
+  font-family: 'Roboto Mono', monospace;
+  font-weight: 400;
+  line-height: 1.5;
+}
+
+p {
+  margin-bottom: 1.25em;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  margin: 2.75rem 0 1rem;
+  font-family: 'Roboto Mono', monospace;
+  font-weight: 400;
+  line-height: 1.15;
+}
+
+h1 {
+  margin-top: 0;
+  font-size: 4.209em;
+}
+
+h2 {
+  font-size: 3.157em;
+}
+
+h3 {
+  font-size: 2.369em;
+}
+
+h4 {
+  font-size: 1.777em;
+}
+
+h5 {
+  font-size: 1.333em;
+}
+
+small {
+  font-size: 0.75em;
 }
