--- a/css/base.css
+++ b/css/base.css
@@ -1,4 +1,8 @@
+/* Configuration */
 @import 'config/_typography.scss';
 @import 'config/_utilities.scss';
+@import 'config/_states.scss';
 @import 'config/_reset.scss';
 @import 'config/_layout.scss';
+
+/* Components */
