Add focus states

--- a/css/base.css
+++ b/css/base.css
@@ -1,4 +1,5 @@
 /* Configuration */
+@import 'config/_variables.scss';
 @import 'config/_typography.scss';
 @import 'config/_utilities.scss';
 @import 'config/_states.scss';
