--- a/css/components/header.scss
+++ b/css/components/header.scss
@@ -2,4 +2,11 @@ header {
   height: 40vh;
   background: $primary;
   color: $secondary;
+  display: flex;
+  align-items: center;
+
+  div {
+    max-width: 38rem;
+    margin: 0 auto;
+  }
 }
