Add figure component

--- a/_includes/layouts/default.njk
+++ b/_includes/layouts/default.njk
@@ -2,8 +2,8 @@
 layout: layouts/base
 ---
 
-{% include 'components/nav.njk' %}
-{% include 'components/header.njk' %}
+{# {% include 'components/nav.njk' %} #}
+{# {% include 'components/header.njk' %} #}
 
 <main>
   {{ content | safe }}
