--- a/css/config/_typography.scss
+++ b/css/config/_typography.scss
@@ -4,7 +4,7 @@ html {
 
 body {
   background-color: white;
-  font-family: 'Roboto Mono', monospace;
+  font-family: 'Roboto Slab', serif;
   font-weight: 400;
   line-height: 1.5;
 }
@@ -19,34 +19,33 @@ h3,
 h4,
 h5 {
   margin: 2.75rem 0 1rem;
-  font-family: 'Roboto Mono', monospace;
   font-weight: 400;
   line-height: 1.15;
 }
 
 h1 {
   margin-top: 0;
-  font-size: 4.209em;
+  font-size: 3.052em;
 }
 
 h2 {
-  font-size: 3.157em;
+  font-size: 2.441em;
 }
 
 h3 {
-  font-size: 2.369em;
+  font-size: 1.953em;;
 }
 
 h4 {
-  font-size: 1.777em;
+  font-size: 1.563em;;
 }
 
 h5 {
-  font-size: 1.333em;
+  font-size: 1.25em;;
 }
 
 small {
-  font-size: 0.75em;
+  font-size: 0.8em;
 }
 
 .display {
