Update image components

--- a/_includes/components/figure.njk
+++ b/_includes/components/figure.njk
@@ -5,4 +5,4 @@
   </figure>
 {% endmacro %}
 
-{{ figure("/static/img/unsplash.jpg", "Image form Unsplash", "Caption of the image") }}
+{{ figure("/static/img/image.jpg", "Image form Unsplash", "Caption of the image") }}
