Add button component

--- a/pages/components.njk
+++ b/pages/components.njk
@@ -7,7 +7,15 @@ permalink: components/
 
 <span>Image</span>
 {% include 'components/image.njk' %}
+<br>
 <hr>
 <span>Image with caption</span>
 {% include 'components/figure.njk' %}
+<br>
+<hr>
+<span>Button</span>
+<br>
+<br>
+{% include 'components/button.njk' %}
+<br>
 <hr>
