--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -6,6 +6,7 @@
     {% include 'config/social.njk' %}
     <title>{{ metadata.title }}</title>
     <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <script src="/static/js/script.js" type="text/javascript" async>
   </head>
   <body>
     {{ content | safe }}
