--- a/_includes/config/meta.njk
+++ b/_includes/config/meta.njk
@@ -6,3 +6,5 @@
 <meta name="msapplication-config" content="browserconfig.xml">
 <link rel="canonical" href="{{ metadata.url }}">
 <link rel="shortlink" href="{{ metadata.url }}">
+<link rel="dns-prefetch" href="{{ metadata.url }}">
+<link rel="preconnect" href="{{ metadata.url }}">
