--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -4,6 +4,7 @@
     {% include 'config/meta.njk' %}
     {% include 'config/favicon.njk' %}
     {% include 'config/social.njk' %}
+    {% include 'config/pre.njk' %}
     <title>{{ metadata.title }}</title>
     <link rel="stylesheet" type="text/css" href="/css/style.css">
     <script src="/static/js/script.js" type="text/javascript" async></script>
