--- a/_includes/config/meta.njk
+++ b/_includes/config/meta.njk
@@ -1,6 +1,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-<meta name="description" content="Description">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="description" content="{{ metadata.description }}">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 <meta name="msapplication-config" content="browserconfig.xml">
