Update meta tags

--- a/_includes/config/meta.njk
+++ b/_includes/config/meta.njk
@@ -5,7 +5,7 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 <meta name="msapplication-config" content="browserconfig.xml">
-<link rel="canonical" href="{{ metadata.url }}">
-<link rel="shortlink" href="{{ metadata.url }}">
+<link rel="canonical" href="{{ metadata.url }}{{ page.url }}">
+<link rel="shortlink" href="{{ metadata.url }}{{ page.url }}">
 <link rel="dns-prefetch" href="{{ metadata.url }}">
 <link rel="preconnect" href="{{ metadata.url }}">
