--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -7,7 +7,7 @@
     {% include 'config/pre.njk' %}
     <title>{{ metadata.title }}</title>
     <link rel="stylesheet" type="text/css" href="/css/style.css">
-    <script src="/static/js/script.js" type="text/javascript" async></script>
+    <script src="/static/js/script.js" type="text/javascript" defer></script>
   </head>
   <body>
     {{ content | safe }}
