--- a/css/config/_utilities.scss
+++ b/css/config/_utilities.scss
@@ -9,6 +9,11 @@
   text-decoration: none;
 }
 
-.hide {
-  display: none;
+@define-mixin reduced-motion {
+  @media screen and (prefers-reduced-motion: reduce), (update: slow) {
+    * {
+      animation-duration: 0.001ms !important;
+      animation-iteration-count: 1 !important;
+    }
+  }
 }
