--- a/_includes/components/button.njk
+++ b/_includes/components/button.njk
@@ -1,1 +1,10 @@
-<a class="btn" href="#">Link</a>
+{% macro linkInt(link, label) %}
+  <a class="btn" href="{{ link }}">{{ label }}</a>
+{% endmacro %}
+
+{% macro linkExt(link, label) %}
+  <a class="btn" href="{{ link }}" target="_blank" rel="noopener">{{ label }}</a>
+{% endmacro %}
+
+{{ linkInt("https://dandevri.es/", "Internal") }}
+{{ linkExt("https://dandevri.es/", "External") }}
